Last layout fixes and better css namespacing fpor klus

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -94,6 +94,13 @@ h2 small { font-size: 18px; }
 h3 small { font-size: 14px; }
 h4 small { font-size: 14px; }
 
+/*
+ * IMAGES
+ */
+
+.img-polaroid {
+	background: none;
+}
 
 
 /*
